--- a/tomonotomo/templates/tomonotomo/base.html
+++ b/tomonotomo/templates/tomonotomo/base.html
@@ -113,7 +113,7 @@ mixpanel.init("00870579855cee982a5cc4d3f13ca9b4");</script><!-- end Mixpanel -->
 <footer>
 	<div class="container_12">
 		<div class="grid_12">
-			Tomonotomo © 2013 • <a href="home">Home</a> • <a href="about">About</a>
+			Tomonotomo © 2013| <a href="home">Home</a> | <a href="about">About</a> | <a href="terms">Terms</a>
 		</div>
 	</div>
 </footer>
