--- a/tomonotomo/templates/tomonotomo/friend.html
+++ b/tomonotomo/templates/tomonotomo/friend.html
@@ -100,6 +100,7 @@
 				<div class="grid_4">
 					<div>
                         {% if user.id %}
+				{% if mutualfriends %}
 						<a rel="leanModal" name="lean_overlay" href="#lean_overlay" id="feedback1" class="btn friendbtn"><h3 style="color:white">Ask friend for Introduction</h3></a><br/><br/>
 						    {% if email_exists %}
                                 <a id="feedback2" href="tntAction/{{ fbid }}/2/0" class="btn friendbtn"><h3 style="color:white">Connect directly</h3></a><br/><br/>
@@ -108,6 +109,7 @@
 						<a id="feedback4" href="tntAction/{{ fbid }}/4/0" class="btn friendbtn"><h3 style="color:white">Pass, and never show</h3></a><br/><br/>
 				<a id="feedback5" href="tntAction/{{ fbid }}/5/0" class="btn friendbtn"><h3 style="color:white">Skip</h3></a><br/><br/>
 					    {% endif %}
+					{% endif %}
                     </div>
 
                     <script type="text/javascript">
