--- a/tomonotomo/templates/tomonotomo/email-source.html
+++ b/tomonotomo/templates/tomonotomo/email-source.html
@@ -469,8 +469,7 @@
                                                 <!-- // Begin Module: Top Image with Content \\ -->
                                                 <table border="0" cellpadding="20" cellspacing="0" width="100%">
                                                     <tbody><tr mc:repeatable="">
-                                                        <td valign="top">
-                                                            <img src="{{ leftimage }}" style="max-width:260px;" mc:label="image" mc:edit="tiwc300_image00">
+                                                        <td valign="top" style="text-align:center">                                                           <img src="{{ leftimage }}" style="max-width:260px;" mc:label="image" mc:edit="tiwc300_image00">
                                                             <div mc:edit="tiwc300_content00">
  	                                                           <h4 class="h4"><a href="http://www.tomonotomo.com/friend/{{ leftid }}" target="_blank">{{ lefttitle }}</a></h4>
                                                                	{{ leftcontent }}
@@ -486,7 +485,7 @@
                                                 <!-- // Begin Module: Top Image with Content \\ -->
                                                 <table border="0" cellpadding="20" cellspacing="0" width="100%">
                                                     <tbody><tr mc:repeatable="">
-                                                        <td valign="top">
+                                                        <td valign="top" style=""text-align:center">
                                                             <img src="{{ rightimage }}" style="max-width:260px;" mc:label="image" mc:edit="tiwc300_image01">
                                                             <div mc:edit="tiwc300_content01">
  	                                                           <h4 class="h4"><a href="http://www.tomonotomo.com/friend/{{ rightid }}" target="_blank">{{ righttitle }}</a></h4>
@@ -542,8 +541,7 @@
                                                     <tr>
                                                         <td valign="top" width="350">
                                                             <div mc:edit="std_footer">
-															<!--	<em>Copyright © 2013, All rights reserved.</em>-->
-																<br>
+									<br>
 																<strong>Our mailing address is:</strong>
 																<br>
 76, Vrindavan Vihar, Ajmer Road, Jaipur, Rajasthan, India                                                            </div>
@@ -554,9 +552,9 @@
                                                     </tr>
                                                     <tr>
                                                         <td colspan="2" valign="middle" id="utility">
-                                                            <!--<div mc:edit="std_utility">
+                                                            <div mc:edit="std_utility">
                                                                 &nbsp;<a href="mailto:admin@tomonotomo.com">unsubscribe from this list</a>
-                                                            </div>-->
+                                                            </div>
                                                         </td>
                                                     </tr>
                                                 </tbody></table>
