--- a/tomonotomo/templates/tomonotomo/friend.html
+++ b/tomonotomo/templates/tomonotomo/friend.html
@@ -73,14 +73,14 @@
 			<div style="padding-right:0px;text-align:right">
 				{% if worklist %}
 					<div class="block"><span> Work </span>
-						{% for work in worklist %}
+						{% for work in worklist.reverse() %}
 							{{ work }}<br/>
 						{% endfor %}
 					</div>
 				{% endif %}
 				{% if educationlist %}
 					<div class="block"><span> Education </span>
-						{% for education in educationlist %}
+						{% for education in educationlist.reverse() %}
 							{{ education }}<br/>
 						{% endfor %}
 					</div>
@@ -100,14 +100,14 @@
 				<div class="grid_4">
 					<div>
                         {% if user.id %}
-				{% if mutualfriends %}
-						<a rel="leanModal" name="lean_overlay" href="#lean_overlay" id="feedback1" class="btn friendbtn"><h3 style="color:white">Ask friend for Introduction</h3></a><br/><br/>
+				{% if show_button %}
+						<a rel="leanModal" name="lean_overlay" href="#lean_overlay" id="feedback1" class="btn friendbtn"><h3 style="color:white">Ask friend for Introduction</h3><img src="http://www.tomonotomo.com/static/tomonotomo/img/help.png" style="margin-left:3px;vertical-align:center"/></a><br/><br/>
 						    {% if email_exists %}
-                                <a id="feedback2" href="tntAction/{{ fbid }}/2/0" class="btn friendbtn"><h3 style="color:white">Connect directly</h3></a><br/><br/>
+                                <a id="feedback2" href="/tntAction/{{ fbid }}/2/0" class="btn friendbtn"><h3 style="color:white">Connect directly</h3></a><br/><br/>
 						    {% endif %}
-                        <a id="feedback3" href="tntAction/{{ fbid }}/3/0" class="btn friendbtn"><h3 style="color:white">Looks Cute/Handsome</h3></a><br/><br/>
-						<a id="feedback4" href="tntAction/{{ fbid }}/4/0" class="btn friendbtn"><h3 style="color:white">Pass, and never show</h3></a><br/><br/>
-				<a id="feedback5" href="tntAction/{{ fbid }}/5/0" class="btn friendbtn"><h3 style="color:white">Skip</h3></a><br/><br/>
+                        <a id="feedback3" href="/tntAction/{{ fbid }}/3/0" class="btn friendbtn"><h3 style="color:white">Looks Cute/Handsome</h3></a><br/><br/>
+						<a id="feedback4" href="/tntAction/{{ fbid }}/4/0" class="btn friendbtn"><h3 style="color:white">Pass, and never show</h3></a><br/><br/>
+				<a id="feedback5" href="/tntAction/{{ fbid }}/5/0" class="btn friendbtn"><h3 style="color:white">Skip</h3></a><br/><br/>
 					    {% endif %}
 					{% endif %}
                     </div>
@@ -158,7 +158,7 @@
                 <div id="lean_overlay-body">
                         {% if mutualfriends %}
                             {% for mutualfriend in mutualfriends %}
-                                <a href="tntAction/{{ fbid }}/1/{{ mutualfriend.id }}"><div class="reqfriend"><img class="reqfriend" src="{% static 'tomonotomo/img/facebook-blank.png' %}"><h4>{{ mutualfriend.name }}</h4></div></a>
+                                <a href="/tntAction/{{ fbid }}/1/{{ mutualfriend.id }}"><div class="reqfriend"><img class="reqfriend" src="{% static 'tomonotomo/img/facebook-blank.png' %}"><h4>{{ mutualfriend.name }}</h4></div></a>
                             {% endfor %}
                         {% endif %}
                 </div>
