--- a/tomonotomo/templates/tomonotomo/email-source.html
+++ b/tomonotomo/templates/tomonotomo/email-source.html
@@ -485,7 +485,7 @@
                                                 <!-- // Begin Module: Top Image with Content \\ -->
                                                 <table border="0" cellpadding="20" cellspacing="0" width="100%">
                                                     <tbody><tr mc:repeatable="">
-                                                        <td valign="top" style=""text-align:center">
+                                                        <td valign="top" style="text-align:center">
                                                             <img src="{{ rightimage }}" style="max-width:260px;" mc:label="image" mc:edit="tiwc300_image01">
                                                             <div mc:edit="tiwc300_content01">
  	                                                           <h4 class="h4"><a href="http://www.tomonotomo.com/friend/{{ rightid }}" target="_blank">{{ righttitle }}</a></h4>
