--- a/tomonotomo/templates/tomonotomo/email.html
+++ b/tomonotomo/templates/tomonotomo/email.html
@@ -6,7 +6,7 @@
         <meta property="og:title" content="{{ title }}">
         
         <title>{{ title }}</title>
-                
+		
 	</head>
     <body leftmargin="0" marginwidth="0" topmargin="0" marginheight="0" offset="0" style="-webkit-text-size-adjust: none;margin: 0;padding: 0;background-color: #FAFAFA;width: 100%;">
     	<center>
@@ -67,8 +67,7 @@
                                                 <!-- // Begin Module: Top Image with Content \ -->
                                                 <table border="0" cellpadding="20" cellspacing="0" width="100%">
                                                     <tbody><tr mc:repeatable="">
-                                                        <td valign="top" style="border-collapse: collapse;">
-                                                            <img src="{{ leftimage }}" style="max-width: 260px;border: 0;height: auto;line-height: 100%;outline: none;text-decoration: none;display: inline;" mc:label="image" mc:edit="tiwc300_image00">
+                                                        <td valign="top" style="text-align: center;border-collapse: collapse;">                                                           <img src="{{ leftimage }}" style="max-width: 260px;border: 0;height: auto;line-height: 100%;outline: none;text-decoration: none;display: inline;" mc:label="image" mc:edit="tiwc300_image00">
                                                             <div mc:edit="tiwc300_content00" style="color: #505050;font-family: Arial;font-size: 14px;line-height: 150%;text-align: left;">
  	                                                           <h4 class="h4" style="color: #202020;display: block;font-family: Arial;font-size: 22px;font-weight: bold;line-height: 100%;margin-top: 0;margin-right: 0;margin-bottom: 10px;margin-left: 0;text-align: left;"><a href="http://www.tomonotomo.com/friend/{{ leftid }}" target="_blank" style="color: #336699;font-weight: normal;text-decoration: underline;">{{ lefttitle }}</a></h4>
                                                                	{{ leftcontent }}
@@ -84,7 +83,7 @@
                                                 <!-- // Begin Module: Top Image with Content \ -->
                                                 <table border="0" cellpadding="20" cellspacing="0" width="100%">
                                                     <tbody><tr mc:repeatable="">
-                                                        <td valign="top" style="border-collapse: collapse;">
+                                                        <td valign="top" style="text-align: center;border-collapse: collapse;">
                                                             <img src="{{ rightimage }}" style="max-width: 260px;border: 0;height: auto;line-height: 100%;outline: none;text-decoration: none;display: inline;" mc:label="image" mc:edit="tiwc300_image01">
                                                             <div mc:edit="tiwc300_content01" style="color: #505050;font-family: Arial;font-size: 14px;line-height: 150%;text-align: left;">
  	                                                           <h4 class="h4" style="color: #202020;display: block;font-family: Arial;font-size: 22px;font-weight: bold;line-height: 100%;margin-top: 0;margin-right: 0;margin-bottom: 10px;margin-left: 0;text-align: left;"><a href="http://www.tomonotomo.com/friend/{{ rightid }}" target="_blank" style="color: #336699;font-weight: normal;text-decoration: underline;">{{ righttitle }}</a></h4>
@@ -140,8 +139,7 @@
                                                     <tr>
                                                         <td valign="top" width="350" style="border-collapse: collapse;">
                                                             <div mc:edit="std_footer" style="color: #707070;font-family: Arial;font-size: 12px;line-height: 125%;text-align: left;">
-															<!--	<em>Copyright © 2013, All rights reserved.</em>-->
-																<br>
+									<br>
 																<strong>Our mailing address is:</strong>
 																<br>
 76, Vrindavan Vihar, Ajmer Road, Jaipur, Rajasthan, India                                                            </div>
@@ -152,9 +150,9 @@
                                                     </tr>
                                                     <tr>
                                                         <td colspan="2" valign="middle" id="utility" style="border-collapse: collapse;background-color: #FFFFFF;border: 0;">
-                                                            <!--<div mc:edit="std_utility">
-                                                                &nbsp;<a href="mailto:admin@tomonotomo.com">unsubscribe from this list</a>
-                                                            </div>-->
+                                                            <div mc:edit="std_utility" style="color: #707070;font-family: Arial;font-size: 12px;line-height: 125%;text-align: center;">
+                                                                &nbsp;<a href="mailto:admin@tomonotomo.com" style="color: #336699;font-weight: normal;text-decoration: underline;">unsubscribe from this list</a>
+                                                            </div>
                                                         </td>
                                                     </tr>
                                                 </tbody></table>
@@ -175,5 +173,3 @@
     
 
 </body></html>
-
-
