--- a/tomonotomo/templates/tomonotomo/email-source.html
+++ b/tomonotomo/templates/tomonotomo/email-source.html
@@ -118,7 +118,7 @@
 				margin-right:0;
 				margin-bottom:10px;
 				margin-left:0;
-				/*@editable*/ text-align:left;
+				/*@editable*/ text-align:center;
 			}
 			
 			/* /\/\/\/\/\/\/\/\/\/\ STANDARD STYLING: PREHEADER /\/\/\/\/\/\/\/\/\/\ */
