--- a/tomonotomo/templates/tomonotomo/email.html
+++ b/tomonotomo/templates/tomonotomo/email.html
@@ -69,7 +69,7 @@
                                                     <tbody><tr mc:repeatable="">
                                                         <td valign="top" style="text-align: center;border-collapse: collapse;">                                                           <img src="{{ leftimage }}" style="max-width: 260px;border: 0;height: auto;line-height: 100%;outline: none;text-decoration: none;display: inline;" mc:label="image" mc:edit="tiwc300_image00">
                                                             <div mc:edit="tiwc300_content00" style="color: #505050;font-family: Arial;font-size: 14px;line-height: 150%;text-align: left;">
- 	                                                           <h4 class="h4" style="color: #202020;display: block;font-family: Arial;font-size: 22px;font-weight: bold;line-height: 100%;margin-top: 0;margin-right: 0;margin-bottom: 10px;margin-left: 0;text-align: left;"><a href="http://www.tomonotomo.com/friend/{{ leftid }}" target="_blank" style="color: #336699;font-weight: normal;text-decoration: underline;">{{ lefttitle }}</a></h4>
+ 	                                                           <h4 class="h4" style="color: #202020;display: block;font-family: Arial;font-size: 22px;font-weight: bold;line-height: 100%;margin-top: 0;margin-right: 0;margin-bottom: 10px;margin-left: 0;text-align: center;"><a href="http://www.tomonotomo.com/friend/{{ leftid }}" target="_blank" style="color: #336699;font-weight: normal;text-decoration: underline;">{{ lefttitle }}</a></h4>
                                                                	{{ leftcontent }}
                                                             </div>
                                                         </td>
@@ -86,7 +86,7 @@
                                                         <td valign="top" style="text-align: center;border-collapse: collapse;">
                                                             <img src="{{ rightimage }}" style="max-width: 260px;border: 0;height: auto;line-height: 100%;outline: none;text-decoration: none;display: inline;" mc:label="image" mc:edit="tiwc300_image01">
                                                             <div mc:edit="tiwc300_content01" style="color: #505050;font-family: Arial;font-size: 14px;line-height: 150%;text-align: left;">
- 	                                                           <h4 class="h4" style="color: #202020;display: block;font-family: Arial;font-size: 22px;font-weight: bold;line-height: 100%;margin-top: 0;margin-right: 0;margin-bottom: 10px;margin-left: 0;text-align: left;"><a href="http://www.tomonotomo.com/friend/{{ rightid }}" target="_blank" style="color: #336699;font-weight: normal;text-decoration: underline;">{{ righttitle }}</a></h4>
+ 	                                                           <h4 class="h4" style="color: #202020;display: block;font-family: Arial;font-size: 22px;font-weight: bold;line-height: 100%;margin-top: 0;margin-right: 0;margin-bottom: 10px;margin-left: 0;text-align: center;"><a href="http://www.tomonotomo.com/friend/{{ rightid }}" target="_blank" style="color: #336699;font-weight: normal;text-decoration: underline;">{{ righttitle }}</a></h4>
                                                                	{{ rightcontent }}
                                                             </div>
                                                         </td>
