--- a/tomonotomo/templates/tomonotomo/dbsummary.html
+++ b/tomonotomo/templates/tomonotomo/dbsummary.html
@@ -3,7 +3,6 @@
 
 {% block bodycontent %}
 
-<!TODO: More detailed summary -->
 <div class="page1_block">
 	<div class="container_12">
 		<div style="margin-left:20%;margin-top:20px;font-size:120%">
@@ -13,6 +12,8 @@
             Number of Users with data: {{ dbsummary_users_data }}<br/>
             Number of UserFriend Entries: {{ dbsummary_userfriends }}<br/>
             Number of Feedback received: {{ dbsummary_userfeedback }}<br/>
+	    Users: {{ dbsummary_users }}<br/>
+	    Feedback Stats: {{ dbsummary_feedback }}<br/>
 		</div>
 	</div>
 </div>
