--- a/tomonotomo/templates/tomonotomo/friend.html
+++ b/tomonotomo/templates/tomonotomo/friend.html
@@ -102,25 +102,25 @@
 					<div>
                         {% if user.id %}
 				{% if show_button %}
-					<a rel="leanModal" name="lean_overlay" href="#lean_overlay" id="feedback1" class="btn friendbtn" title="sends an email to you and a friend you choose requesting for an introduction to {{ fullname }}">
+					<a rel="leanModal" name="lean_overlay" href="#lean_overlay" id="feedback1" class="btn friendbtn" title="Sends an email to you and a friend you choose requesting for an introduction to {{ fullname }}">
 						<h3 style="color:white">Ask friend for Introduction</h3>
 					</a>
 					<br/><br/>
 					{% if email_exists %}
-                                	<a id="feedback2" href="/tntAction/{{ fbid }}/2/0" class="btn friendbtn" title="sends an email to you and {{ fullname }} requesting to connect">
+                                	<a id="feedback2" href="/tntAction/{{ fbid }}/2/0" class="btn friendbtn" title="Sends an email to you and {{ fullname }} requesting to connect">
 						<h3 style="color:white">Connect directly</h3>
 					</a>
 					<br/><br/>
 					{% endif %}
-                        		<a id="feedback3" href="/tntAction/{{ fbid }}/3/0" class="btn friendbtn" title="sends email to you and {{ fullname }} only if both of you find each other cute/handsome">
+                        		<a id="feedback3" href="/tntAction/{{ fbid }}/3/0" class="btn friendbtn" title="Sends email to you and {{ fullname }} only if both of you find each other cute/handsome">
 					<h3 style="color:white">Looks Cute/Handsome</h3>
 					</a>
 					<br/><br/>
-					<a id="feedback4" href="/tntAction/{{ fbid }}/4/0" class="btn friendbtn" title="skip, do not show {{ fullname }} to me again and show next">
+					<a id="feedback4" href="/tntAction/{{ fbid }}/4/0" class="btn friendbtn" title="Skip, do not show {{ fullname }} to me again and show next">
 					<h3 style="color:white">Pass, and never show</h3>
 					</a>
 					<br/><br/>
-					<a id="feedback5" href="/tntAction/{{ fbid }}/5/0" class="btn friendbtn" title="skip and show next">
+					<a id="feedback5" href="/tntAction/{{ fbid }}/5/0" class="btn friendbtn" title="Skip and show next">
 					<h3 style="color:white">Skip</h3>
 					</a>
 					<br/><br/>
