--- a/tomonotomo/templates/tomonotomo/base.html
+++ b/tomonotomo/templates/tomonotomo/base.html
@@ -63,7 +63,7 @@ mixpanel.init("00870579855cee982a5cc4d3f13ca9b4");</script><!-- end Mixpanel -->
 	<header>
 		<div class="container_12">
 			<div class="grid_12">
-				<div style="font-size:80px;color:black;float:left;vertical-align:bottom"><a href="home">tomonotomo</a></div>
+				<div style="font-size:80px;color:black;float:left;vertical-align:bottom"><a href="/home">tomonotomo</a></div>
 				<div class="links">
 					{% if user.id %}
 						{{ user.first_name }} - <a href="/logout">Logout</a>
