Bugs and HN feedback

--- a/tomonotomo/templates/tomonotomo/about.html
+++ b/tomonotomo/templates/tomonotomo/about.html
@@ -21,7 +21,7 @@
 			Why "Tomonotomo" will work?<br/><br/>
 			<ul class="list">
 				<li>Tomonotomo is short for "tomodachi no tomodachi" which is japanese for "Friends of Friends". You see only profiles of friends of friends and only friends of friends see your profile.</li>
-				<li>You contact the people you like in three ways: Ask friend to introduce, Contact friend of friend directly, and Just mention that you find the friend of friend cute/handsome. If he/she also feels the same way, we will connect you two after taking permission from you</li>
+				<li>You contact the people you like in three ways: Ask friend to introduce, Contact friend of friend directly, and Just mention that you find the friend of friend attractive. If he/she also feels the same way, we will connect you two after taking permission from you</li>
 				<li>Since, explicity or implicitly, there is always a common friend involved, the system ensures more safety, trust and friendliness</li>
 			</ul>
 			<br/>
