--- a/tomonotomo/templates/tomonotomo/friend.html
+++ b/tomonotomo/templates/tomonotomo/friend.html
@@ -112,8 +112,8 @@
 					</a>
 					<br/><br/>
 					{% endif %}
-                        		<a id="feedback3" href="/tntAction/{{ fbid }}/3/0" class="btn friendbtn" title="Sends email to you and {{ fullname }} only if both of you find each other cute/handsome">
-					<h3 style="color:white">Looks Cute/Handsome</h3>
+                        		<a id="feedback3" href="/tntAction/{{ fbid }}/3/0" class="btn friendbtn" title="Sends email to you and {{ fullname }} only if both of you find each other attractive">
+					<h3 style="color:white">Looks Attractive</h3>
 					</a>
 					<br/><br/>
 					<a id="feedback4" href="/tntAction/{{ fbid }}/4/0" class="btn friendbtn" title="Skip, do not show {{ fullname }} to me again and show next">
