--- a/tomonotomo/templates/tomonotomo/dbsummary.html
+++ b/tomonotomo/templates/tomonotomo/dbsummary.html
@@ -17,19 +17,19 @@
 		{% for dbfeedback in dbsummary_feedback %}
 			{{ dbfeedback.action }} - {{dbfeedback.action__count }}<br/>
 		{% endfor %}
-	    <br/>Users loggedin in last 24 hours:<br/>
+	    <br/>Users loggedin in last 24 hours: ({{ dbsummary_users_login_24 | length }})<br/>
 		{% for dbuser in dbsummary_users_login_24 %}
 			{{ dbuser }} <br/>
 		{% endfor %}
-	    <br/>Users registerd in last 24 hours:<br/>
+	    <br/>Users registerd in last 24 hours: ({{ dbsummary_users_register_24 | length }})<br/>
                 {% for dbuser in dbsummary_users_register_24 %}
                         {{ dbuser }} <br/>
                 {% endfor %}
-            <br/>Users registerd in last 1 hour:<br/>
+            <br/>Users registerd in last 1 hour: ({{ dbsummary_users_register_1 | length }})<br/>
                 {% for dbuser in dbsummary_users_register_1 %}
                         {{ dbuser }} <br/>
                 {% endfor %}            
-	    <br/>Users: <br/>
+	    <br/>Users: ({{ dbsummary_users | length }})<br/>
                 {% for dbuser in dbsummary_users %}
                         {{ dbuser.first_name }} - {{dbuser.last_name}} - {{dbuser.userid}} - {{dbuser.email}}<br/>
                 {% endfor %}
